<resources>

    <string name="app_name">ImageSnap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="login">Login</string>
    <string name="not_registered">I dont have account. Register Me!</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">REGISTER</string>
    <string name="welcome_text">Welcome, Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_registered">Already registred. Login Me!</string>
    
    <string name="no_internet">No Internet Connectivity</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log me out!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings_picture">Settings Picture</string>
    <string name="hi">Welcome, (name)</string>
    <string name="photo_layout_title">              MY                    FRIENDS              RANDOM</string>
    

    <string-array name="dashboard">
        <item>My Profile</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    
</resources>